--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Kanit:wght@500&display=swap');
+
 .App {
+  margin: auto;
+  width: 80%;
+  font-family: "Inter", sans-serif;
+
+}
+
+.logo {
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  text-transform: lowercase;
+  margin: 24px auto;
+}
+
+.header {
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 120px;
+  margin: 64px auto;
+}
+
+.credits {
+  display: flex;
+  flex-wrap: wrap;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  justify-content: flex-end;
+  align-items: center;
   text-align: center;
+  color: #081E34;
+  opacity: 0.5;
+  margin-top: 778px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.credits a {
+  color: #081E34;
+  opacity: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.end-footer {
+  margin: 32px 0;
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  color: #081E34;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+.logo-header {
+  font-family: "Kanit", sans-serif;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 120px;
+  margin: 64px auto;
+}
+
+.content {
+  display: flex;
+  align-items: flex-start;
+  gap: 45px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 50px;
+}
+
+#articles {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  padding: 0px 0px 36px;
+  gap: 40px;
+  width: 1120px;
+}
+
+.content-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* padding: 0px; */
+  gap: 48px;
+}
+
+#title {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
+  margin: 0;
+}
+
+.content-header {
+  display: flex;
   align-items: center;
+  gap: 4px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+}
+.content-header p span {
+  opacity: 0.5;
+}
+
+.articles_info_header p img {
+  opacity: 0.5;
+}
+.articles img {
+  display: flex;
+  gap: 100px;
+}
+
+.content-footer button {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 6px 11px;
+  background: linear-gradient(
+      0deg,
+      rgba(8, 30, 52, 0.12),
+      rgba(8, 30, 52, 0.12)
+    ),
+    #fffbfe;
+  border: none;
+  width: 107px;
+  height: 30px;
+  border-radius: 100px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.content-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding: 0px 0px 30px 0px;
+  gap: 325px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-footer-left {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px;
+  gap: 8px;
+  width: 330px;
+  height: 30px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
 }
+
+.content-footer-left p {
+  opacity: 0.5;
+}
+
+.imgserver {
+  width: 265px;
+  height: 265px;
+  padding-left: 5%;
+  padding-right: 10%;
+}
+
+#button {
+  width: max-content;
+}
+
+.squares {
+  display: flex;
+  column-gap: 14px;
+  justify-content: flex-end;
+}
+
+.square {
+  background: #E1E0E6;
+  width: 20px;
+  height: 20px;
+}
+
